sf-hrms/force-app/main/default/objects/Attendance_Punch__c/Attendance_Punch__c.object-meta.xml
<CustomObject>
    <label>Attendance Punch</label>
    <nameField>
        <displayFormat>ID-{00000}</displayFormat>
        <label>Punch ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendance Punches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>