sf-hrms/force-app/main/default/objects/Attendance_Punch__c/fields/Adjusted_By__c.field-meta.xml
<CustomField><fullName>Adjusted_By__c</fullName><label>Adjusted By</label><type>Lookup</type><referenceTo>Employee__c</referenceTo><relationshipLabel>Punch Adjustments</relationshipLabel><relationshipName>Punch_Adjustments</relationshipName></CustomField>