sf-hrms/force-app/main/default/objects/Attendance_Punch__c/fields/Adjustment_Reason__c.field-meta.xml
<CustomField><fullName>Adjustment_Reason__c</fullName><label>Adjustment Reason</label><type>LongTextArea</type><length>32768</length><visibleLines>3</visibleLines></CustomField>