sf-hrms/force-app/main/default/objects/Attendance_Punch__c/fields/Approved__c.field-meta.xml
<CustomField><fullName>Approved__c</fullName><label>Approved</label><type>Checkbox</type><defaultValue>false</defaultValue></CustomField>