sf-hrms/force-app/main/default/objects/Attendance_Punch__c/fields/Attendance__c.field-meta.xml
<CustomField>
    <fullName>Attendance__c</fullName>
    <label>Attendance Day</label>
    <description>The rolled-up day this punch belongs to. Stamped by AttendanceRollupService after the day is derived, never entered by hand. A lookup rather than a master-detail on purpose: the day is derived from the punches, so it must not own them. A master-detail would cascade-delete the punches whenever the rollup removed a day, destroying the very records the day was calculated from.</description>
    <inlineHelpText>Set automatically. The attendance day these punches roll up into.</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Attendance__c</referenceTo>
    <relationshipLabel>Punches</relationshipLabel>
    <relationshipName>Punches</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>