sf-hrms/force-app/main/default/objects/Attendance_Punch__c/fields/Device_ID__c.field-meta.xml
<CustomField>
    <fullName>Device_ID__c</fullName>
    <label>Device ID</label>
    <description>Serial or identifier of the biometric terminal that recorded the punch. Blank for punches made in the portal or Slack.</description>
    <type>Text</type>
    <length>64</length>
</CustomField>