sf-hrms/force-app/main/default/objects/Attendance_Punch__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <type>Lookup</type>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Attendance Punchs</relationshipLabel>
    <relationshipName>Attendance_Punch_Employees</relationshipName>
</CustomField>