sf-hrms/force-app/main/default/objects/Attendance_Punch__c/fields/External_Punch_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Punch_ID__c</fullName>
    <label>External Punch ID</label>
    <description>The punch's identity on the device that recorded it, as deviceId:timestamp. Unique and indexed so a biometric device replaying a batch cannot create the same punch twice, which would corrupt the derived break time.</description>
    <inlineHelpText>Set by the biometric integration. Leave blank for punches made in the portal or Slack.</inlineHelpText>
    <type>Text</type>
    <length>120</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>