sf-hrms/force-app/main/default/objects/Attendance_Punch__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <label>Latitude</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>6</scale>
</CustomField>