sf-hrms/force-app/main/default/objects/Attendance_Punch__c/fields/Punch_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Punch_DateTime__c</fullName>
    <label>Punch DateTime</label>
    <type>DateTime</type>
</CustomField>