sf-hrms/force-app/main/default/objects/Attendance_Punch__c/fields/Punch_Type__c.field-meta.xml
<CustomField>
    <fullName>Punch_Type__c</fullName>
    <label>Punch Type</label>
    <type>Text</type>
    <length>50</length>
</CustomField>