sf-hrms/force-app/main/default/objects/Attendance_Punch__c/listViews/All_Punches.listView-meta.xml
<ListView>
    <fullName>All_Punches</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Punch_DateTime__c</columns>
    <columns>Punch_Type__c</columns>
    <columns>Source__c</columns>
    <columns>Latitude__c</columns>
    <columns>Longitude__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Punches</label>
</ListView>